fixed stuff being hidden by nav bar on survey show page

--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -329,7 +329,7 @@ i {
 
 .survey-show-container {
   position: relative;
-  margin: 2rem auto 0 auto;
+  margin: 8rem auto 0 auto;
   width: 30rem;
 }
 
